--- a/evote.html
+++ b/evote.html
@@ -31,8 +31,17 @@
     margin: 0;
     /*background-color: crimson;*/
 }
-#electionoff{
-    
+ @media only screen and (max-width: 768px) {
+     #projdescription{
+     width: 100%;
+    }
+    #evoting{
+        padding: 0;
+    }
+    #voter{
+        padding: 0;
+    }
+
 }
     </style>
     <body>
