--- a/sitebuilder.html
+++ b/sitebuilder.html
@@ -31,7 +31,7 @@
        
     }
  .camview{
-     width: 70%;
+     width: 600px;
      display: block;
      margin-left: auto;
      margin-right: auto;
@@ -42,6 +42,20 @@
      margin-left: auto;
      margin-right: auto;
  }
+ @media only screen and (max-width: 768px) {
+       #sitebuilder-info{
+        width: 100%;
+    }
+
+ #projdescription{
+     width: 100%;
+ }
+ .camview{
+     width: 350px;
+ }
+
+
+}
         </style>
 
            <script >
